--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=Salon
 spring.data.mongodb.uri=mongodb+srv://thapelorocky98:zHetO7YEa6DtIsa2@cluster0.78jsetv.mongodb.net/SalonDB?retryWrites=true&w=majority
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
