--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,12 @@ spring.data.mongodb.uri=mongodb+srv://thapelorocky98:zHetO7YEa6DtIsa2@cluster0.7
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=snipandstylesmit@gmail.com
+spring.mail.password=Thabo1234
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
