--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.application.name=Salon
-spring.data.mongodb.uri=mongodb+srv://thapelorocky98:zHetO7YEa6DtIsa2@cluster0.78jsetv.mongodb.net/SalonDB?retryWrites=true&w=majority
+
+spring.data.mongodb.database=SalonDB
+
+spring.data.mongodb.uri=mongodb+srv://rosikgaticwe:yPgMl3xAoMykBWVu@cluster0.twcmqmm.mongodb.net/
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
